# MISS_illness_spread_simulator

./: Agent.cpp  Agent.h  CMakeLists.txt  DrawingEngine.cpp  DrawingEngine.h  GraphDrawer.cpp  GraphDrawer.h  README.md  Simulation.cpp  Simulation.h  StatsDrawer.cpp  StatsDrawer.h  main.cpp
